# mastodon-release-post-action

./: CHANGELOG.md  README.md  action.yml  post_to_mastodon.py  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
lib/: utils.py
tests/: CHANGELOG.md  tests.py
