[tool.poetry]
name = "changelog-formatter-tests"
version = "1.5.0"
description = "Tests for changelog formatting function"
authors = [
           "Christian Meesters <meesters@uni-mainz.de>",
           "Johannes Koester <johannes.koester@uni-due.de>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"  

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3"
pytest = "^8.4.1"
coverage = "^7.0"
black = "^23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
