[tool.poetry]
name = "mastodon-release-post-action"
version = "1.5.0"
description = "An Auto-Release Bot Tooter for Mastodon"
authors = [
           "Christian Meesters <meesters@uni-mainz.de>",
           "Johannes Koester <johannes.koester@uni-due.de>"
]
readme = "README.md"
license = "MIT"
keywords = ["mastodon", "announcement"]

[tool.poetry.dependencies]
python = "^3.12"  

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3"
pytest = "^8.4.1"
coverage = "^7.0"
black = "^23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
